--- a/views/books/edit.pug
+++ b/views/books/edit.pug
@@ -4,20 +4,20 @@ block content
   .container
     .row
       .col-xs-8.offset-xs-2
-        h1 Create a New Book
+        h1 Edit form
         hr
-        form(action="/books" method="POST")
+        form(action="/books" + book.id method="PUT")
           div(class="form-group")
             label Title
-            input(name="title" type="text" class="form-control")
+            input(name="title" type="text" class="form-control" value=book.title)
           div(class="form-group")
             label Cover Image URL
-            input(name="imageSrc" type="text" class="form-control")
+            input(name="imageSrc" type="text" class="form-control" value=book.imageSrc)
           div(class="form-group")
             label Author
-            input(name="author" type="text" class="form-control")
+            input(name="author" type="text" class="form-control" value=book.author)
           div(class="form-group")
             label Description
-            textarea(name="description" class="form-control" rows=5)
+            textarea(name="description" class="form-control" rows=5 value=book.description)
           div(class="form-group text-xs-right")
             button(type="submit" class="btn btn-lg btn-success") Create a book
