--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -4,9 +4,9 @@ block content
   h1 Listing Books
   .container
     .row
-      each book in books
-        .col-xs-3
-          h2= book.title
-          h3= book.author
-          p= book.imageSrc
-          p= book.description
+      //- each book in books
+      //-   .col-xs-3
+      //-     h2= book.title
+      //-     h3= book.author
+      //-     p= book.imageSrc
+      //-     p= book.description
