--- a/views/books/edit.pug
+++ b/views/books/edit.pug
@@ -2,22 +2,21 @@ extends ../application.pug
 
 block content
   .container
-    .row
-      .col-xs-8.offset-xs-2
-        h1 Edit form
-        hr
-        form(action="/books" + book.id method="PUT")
-          div(class="form-group")
-            label Title
-            input(name="title" type="text" class="form-control" value=book.title)
-          div(class="form-group")
-            label Cover Image URL
-            input(name="imageSrc" type="text" class="form-control" value=book.imageSrc)
-          div(class="form-group")
-            label Author
-            input(name="author" type="text" class="form-control" value=book.author)
-          div(class="form-group")
-            label Description
-            textarea(name="description" class="form-control" rows=5 value=book.description)
-          div(class="form-group text-xs-right")
-            button(type="submit" class="btn btn-lg btn-success") Create a book
+    h1 Edit Form
+    hr
+    form(action="/books/" + book.id method="POST")
+      input(type="hidden" name="_method" value="PUT")
+      div(class="form-group")
+        label(for="book-title") Title
+        input(name="title" type="text" class="form-control" id="book-title" value=book.title)
+      div(class="form-group")
+        label(for="book-cover-image") Cover Image URL
+        input(name="imageURL" type="text" class="form-control" id="book-cover-image" value=book.imageURL)
+      div(class="form-group")
+        label(for="book-author") Author
+        input(name="author" type="text" class="form-control" id="book-author" value=book.author)
+      div(class="form-group")
+        label(for="book-description") Description
+        textarea(name="description" class="form-control" rows=5 id="book-description")= book.description
+      div(class="form-group text-xs-right")
+        button(type="submit" class="btn btn-lg btn-success") Submit
