--- a/views/application.pug
+++ b/views/application.pug
@@ -1,11 +1,11 @@
 html
   head
-    title Bookstore Application
+    title Bulletin board
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous")
   body
     nav(class="navbar navbar-light bg-faded")
-      a(class="navbar-brand" href="/") Bookstore
-      a(href="/books/new" class="btn btn-success float-xs-right") Create new book
+      a(class="navbar-brand" href="/") Add notice
+      a(class="navbar-brand" style="float:right" href="/board") Bulletin board
 
 
     block content
